google/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: usher-app
spec:
  selector:
    matchLabels:
      run: usher
  replicas: 1
  template:
    metadata:
      labels:
        run: usher
    spec:
      containers:
      - name: usher
        image: usher:latest
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: "100Mi"
            cpu: "250m"
          limits:
            memory: "150Mi"
            cpu: "250m"
