google/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: usher-lb-svc
  labels:
    run: usher
spec:
  selector:
    name: nginx-ingress-microk8s
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8000
      targetPort: 8000
